# BAUM-Storage-task

./: O_Genri_Testovaya_20_vmeste (1).txt  README.md  broker.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py
